// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Home Show Home 1`] = `
<div
  className="sc-fzoiQi dQuSyH"
>
  <div
    className="sc-fzqARJ ixMeZ"
  >
    <div
      className="sc-fzqNqU bKTuOa"
    >
      Welcome to NASA
    </div>
    <h1
      className="sc-fzpmMD jHfEAe"
    >
      NASA inspires the world by exploring new frontiers, discovering new knowledge, and developing new technology.
    </h1>
    <h1
      className="sc-fzoyTs coWzNg"
    >
      The National Aeronautics and Space Administration (NASA) is the United States government agency responsible for U.S. space exploration, space technology, Earth and space science, and aeronautics research.
    </h1>
  </div>
  <div
    className="sc-fzoXWK jhsJUy"
  >
    <div
      className="sc-fznxKY hqPiBK"
    >
      This is an application build with Techport APIS
    </div>
    <h1
      className="sc-fzoNJl dLCSkh"
    >
      NASA's resource for collecting and sharing information about NASA-funded technology development. Techport allows the public to discover the technologies NASA is working on every day to explore space, understand the universe, and improve aeronautics. NASA is developing technologies in areas such as propulsion, nanotechnology, robotics, and human health. NASA is committed to making its data available and machine-readable through an Application Programming Interface (API) to better serve its user communities.
    </h1>
  </div>
</div>
`;

exports[`Storyshots NavBar Authenticated 1`] = `
<nav
  className="sc-fzqPZZ OgXjr"
  style={
    Object {
      "transform": "translate3d(0, -10rem, 0)",
    }
  }
>
  <div
    className="sc-fzoxKX fUbazN"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="Company Logo"
        className="sc-fznMAR hNyVLe"
        src="nasa-logo.svg"
      />
    </a>
    <ul
      className="sc-fzoKki bulrrA"
      style={
        Object {
          "opacity": 0,
          "transform": "translate3d(0, 30px, 0)",
        }
      }
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        href="/projects"
        onClick={[Function]}
      >
        Projects
      </a>
      <a
        href="/"
        onClick={[Function]}
      >
        LOGOUT
      </a>
    </ul>
    <div
      className="sc-fzoYkl bWTeUe"
    >
      <div
        className="sc-fznWOq buCvjS"
        onClick={[Function]}
      >
        <div
          className=""
        >
          <span>
             
          </span>
          <span>
             
          </span>
          <span>
             
          </span>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots NavBar Unauthenticated 1`] = `
<nav
  className="sc-fzqPZZ OgXjr"
  style={
    Object {
      "transform": "translate3d(0, -10rem, 0)",
    }
  }
>
  <div
    className="sc-fzoxKX fUbazN"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="Company Logo"
        className="sc-fznMAR hNyVLe"
        src="nasa-logo.svg"
      />
    </a>
    <ul
      className="sc-fzoKki bulrrA"
      style={
        Object {
          "opacity": 0,
          "transform": "translate3d(0, 30px, 0)",
        }
      }
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        href="/"
        onClick={[Function]}
      >
        LOGIN
      </a>
    </ul>
    <div
      className="sc-fzoYkl bWTeUe"
    >
      <div
        className="sc-fznWOq buCvjS"
        onClick={[Function]}
      >
        <div
          className=""
        >
          <span>
             
          </span>
          <span>
             
          </span>
          <span>
             
          </span>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Projects Show Project 1`] = `
<div
  className="sc-AxiKw hWRSub"
  height="350px"
>
  <div
    className="sc-fzpans ieMfoU"
  >
    <h1
      className="sc-AxhCb hMXmbp"
    >
      FY18 IRTD Developing a Closed-loop, Bioregenerative Water Purification System for Future Planetary Habitats (Zero-G Anaerobic Membrane Bioreactor)
    </h1>
    <button
      className="sc-AxhUy sc-AxgMl eQsaWW"
    >
      Completed
    </button>
  </div>
  <div
    className="sc-AxmLO corHjn"
  >
    <div
      className="sc-Axmtr hBVTto"
    >
      <p
        className="sc-fzozJi bgyNpF"
      >
        Start Date: 
        Mar 2018
      </p>
      <p
        className="sc-fzoLsD NwLnL"
      >
        Last Update 
        2020-06-04
      </p>
    </div>
    <div
      className="sc-AxirZ eHYpas"
    >
      <div
        className="sc-AxjAm dDFjLF"
        onClick={[Function]}
      >
        <div
          className="sc-fznzOf ljQOcW"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
            />
          </svg>
        </div>
      </div>
      <div
        className="sc-AxjAm dDFjLF"
        onClick={[Function]}
      >
        <div
          className="sc-fzoant eXDgcj"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M3.18 4l1.528 9.164a1 1 0 00.986.836h4.612a1 1 0 00.986-.836L12.82 4H3.18zm.541 9.329A2 2 0 005.694 15h4.612a2 2 0 001.973-1.671L14 3H2l1.721 10.329z"
              fillRule="evenodd"
            />
            <path
              d="M14 3c0 1.105-2.686 2-6 2s-6-.895-6-2 2.686-2 6-2 6 .895 6 2z"
            />
            <path
              clipRule="evenodd"
              d="M12.9 3c-.18-.14-.497-.307-.974-.466C10.967 2.214 9.58 2 8 2s-2.968.215-3.926.534c-.477.16-.795.327-.975.466.18.14.498.307.975.466C5.032 3.786 6.42 4 8 4s2.967-.215 3.926-.534c.477-.16.795-.327.975-.466zM8 5c3.314 0 6-.895 6-2s-2.686-2-6-2-6 .895-6 2 2.686 2 6 2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-fzplWN kfkaqr"
  >
    <h1
      className="sc-fznyAO bzFsKX"
    >
      Description
    </h1>
    <div
      className="sc-fznKkj eoewkJ"
    >
       
      <p>
        This project worked to solve the critical needs of future space missions to establish planetary bases that require large volumes of water to support astronauts, food generating plants, and key infrastructure including science experiments and thermal cooling systems by combining water purification, wastewater management, and plant production into a closed-loop, bioregenerative wastewater purification system.  A wastewater treatment facility was designed that will (1) process all forms of wastewater – to include all sources of crew-generated waste; (2) fit within architecture designed for the International Space Station (ISS), Gateway, and future Lunar Surface System habitats; and (3) be fully closed-loop requiring no chemical or filter resupply. Trade studies were performed to identify and characterize the input waste streams into the system, the functions required to perform treatment, and the output streams required by end-users. The required processing functions led to the creation of a system architecture though the downselection of optimal processing methods.
      </p>
        
      <p>
        The initial subsystem, the Anaerobic Membrane BioReactor (AnMBR), was designed and built at the University of South Florida (USF) to process high concentration blackwater. The AnMBR subsystem breaks down particulate organic matter and large molecules through an anaerobic microbial membrane process. Prototype fabrication of AnMBR was performed under an NSSC contract utilizing USF lab capabilities, including machining and tooling resources with select components made in the USF 3D fabrication lab. The completed AnMBR system was designed to fit into the EXpedite the PRocessing of Experiments to the Space Station (EXPRESS) rack aboard the ISS. The EXPRESS rack design can potentially be used aboard a future microgravity flight or tweaked to fit within the Gateway Habitat element.
      </p>
        
      <p>
        A Phototrophic Membrane Bioreactor (PMBR) was proposed as the secondary subsystem for the overall ‘closed-loop water purification’ system. The PMBR converts fertilizer compounds from wastewater to algal biomass, providing a source of oxygen, and sink for carbon dioxide. The systems primary goal was to produce a PMBR effluent stream that is suitable for higher order plant growth; this required a reduction of ammonia concentration. Using algae's oxygen production capabilities, the system converted some of the ammonia to nitrate with nitrifying bacteria. In addition to the effluent water stream used for plant growth, the PMBR also produced oxygen and sequesters carbon dioxide. This is currently being measured to quantify the impact of such a system on crew life support and future habitat development. In addition to collecting data on long-term testing, additional investigations are ongoing to further optimize the PMBR.
      </p>
        
      <p>
        Future tasks and deliverables are expected under six-year project plan under an Advanced Exploration Systems funded proposal.
      </p>
       
       
    </div>
  </div>
  <div
    className="sc-AxheI dcPZjX"
  >
    <button
      className="sc-AxhUy bpzict"
      onClick={[Function]}
    >
      Show More
    </button>
  </div>
</div>
`;

exports[`Storyshots Projects Show Projects 1`] = `
Array [
  <div
    className="sc-fzpjYC erycuI"
  >
    <div
      className="sc-fznJRM dgUBuE"
    />
    <div
      className="sc-fzqNJr eXzxxr"
    >
      <button
        className="sc-fzoyAV iXTpvx"
        disabled={false}
        onClick={[Function]}
      >
        &lt;
         Previous
      </button>
      <div
        className="sc-fzoXzr hvfCyO"
      >
         Page 
        5
         
      </div>
      <button
        className="sc-fzoLag dQOWkc"
        disabled={false}
        onClick={[Function]}
      >
        Next &gt;
      </button>
    </div>
    <button
      className="sc-fznxsB cAIpSq"
    >
      Export Data
    </button>
  </div>,
  <div
    className="sc-fznWqX brRYye"
  >
    <div
      className="sc-AxiKw hWRSub"
      height="350px"
    >
      <div
        className="sc-fzpans ieMfoU"
      >
        <h1
          className="sc-AxhCb hMXmbp"
        >
          Autonomous Systems and Operations
        </h1>
        <button
          className="sc-AxhUy sc-AxgMl dSlZWb"
        >
          Active
        </button>
      </div>
      <div
        className="sc-AxmLO corHjn"
      >
        <div
          className="sc-Axmtr hBVTto"
        >
          <p
            className="sc-fzozJi bgyNpF"
          >
            Start Date: 
            Oct 2014
          </p>
          <p
            className="sc-fzoLsD NwLnL"
          >
            Last Update 
            2020-06-09
          </p>
        </div>
        <div
          className="sc-AxirZ eHYpas"
        >
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fzqAbL krWgzN"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                />
              </svg>
            </div>
          </div>
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fzoydu hxZUCs"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clipRule="evenodd"
                  d="M3.18 4l1.528 9.164a1 1 0 00.986.836h4.612a1 1 0 00.986-.836L12.82 4H3.18zm.541 9.329A2 2 0 005.694 15h4.612a2 2 0 001.973-1.671L14 3H2l1.721 10.329z"
                  fillRule="evenodd"
                />
                <path
                  d="M14 3c0 1.105-2.686 2-6 2s-6-.895-6-2 2.686-2 6-2 6 .895 6 2z"
                />
                <path
                  clipRule="evenodd"
                  d="M12.9 3c-.18-.14-.497-.307-.974-.466C10.967 2.214 9.58 2 8 2s-2.968.215-3.926.534c-.477.16-.795.327-.975.466.18.14.498.307.975.466C5.032 3.786 6.42 4 8 4s2.967-.215 3.926-.534c.477-.16.795-.327.975-.466zM8 5c3.314 0 6-.895 6-2s-2.686-2-6-2-6 .895-6 2 2.686 2 6 2z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-fzplWN kfkaqr"
      >
        <h1
          className="sc-fznyAO bzFsKX"
        >
          Description
        </h1>
        <div
          className="sc-fznKkj eoewkJ"
        >
           
          <p>
            The AES Autonomous Systems and Operations (ASO) project will develop an understanding of the impacts of increasing communication time delays on mission operations, develop autonomy technologies to mitigate the impacts, and infuse them into Human Exploration and Operations systems. The technologies are expected to reduce operations costs as well. This technology has been tested on ISS in FY14-16 as part of the AES Autonomous Mission Operations project; testing continues in FY19-20 under ASO. This technology has also been tested in the Integrated Power, Avionics and Software (IPAS) facility at JSC, and in a testing facility during Exploration Flight Test 1 (EFT-1); tests continue under ASO with ISS and Orion systems and also target infusion into the Artemis-2 mission.
            <br />
             
            <br />
             This project incorporates and builds on the results from the AES Autonomous Mission Operations project.
            <br />
             
            <br />
             Future human spaceflight missions will occur with crews and spacecraft at large distances, with long communication delays to the Earth. The one-way light-time delay to the Moon is 1.3 seconds, which is sufficient to make some scenarios (e.g., landing) difficult or impossible to conduct from Earth. One-way communication delays to human exploration destinations such as Near Earth Asteroids (NEAs) range from seconds to minutes. The one-way light-time delay to Mars ranges from 3 minutes (at conjunction) to 22 minutes (at opposition). As the communication delays increase, the crews in the spacecraft must execute, and manage, much of the mission themselves. Throughout the course of a mission, as distances increase, NASA must continue to migrate operations functionality from the remote Mission Control Center flight control room to the vehicle for use by the crew. The role of the ground control teams and systems will evolve away from real-time support to a more long-range planning, diagnosis, analysis, and prognostics support role, while the vehicle systems and crew must take on the role of onboard daily schedule execution, planning, and systems management. Both ground and vehicle systems will require automation to maximize crew functionality, minimize unnecessary overhead, and reduce operating costs. This project is to understand the impacts of increasing communications time delays on operations and to develop technologies to mitigate the impacts.
          </p>
           
           
        </div>
      </div>
      <div
        className="sc-AxheI dcPZjX"
      >
        <button
          className="sc-AxhUy bpzict"
          onClick={[Function]}
        >
          Show More
        </button>
      </div>
    </div>
    <div
      className="sc-AxiKw hWRSub"
      height="350px"
    >
      <div
        className="sc-fzpans ieMfoU"
      >
        <h1
          className="sc-AxhCb hMXmbp"
        >
          UAS Traffic Management
        </h1>
        <button
          className="sc-AxhUy sc-AxgMl dSlZWb"
        >
          Active
        </button>
      </div>
      <div
        className="sc-AxmLO corHjn"
      >
        <div
          className="sc-Axmtr hBVTto"
        >
          <p
            className="sc-fzozJi bgyNpF"
          >
            Start Date: 
            Oct 2015
          </p>
          <p
            className="sc-fzoLsD NwLnL"
          >
            Last Update 
            2020-06-05
          </p>
        </div>
        <div
          className="sc-AxirZ eHYpas"
        >
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fzoYHE fktIFY"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                />
              </svg>
            </div>
          </div>
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fznAgC hxHhmo"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clipRule="evenodd"
                  d="M3.18 4l1.528 9.164a1 1 0 00.986.836h4.612a1 1 0 00.986-.836L12.82 4H3.18zm.541 9.329A2 2 0 005.694 15h4.612a2 2 0 001.973-1.671L14 3H2l1.721 10.329z"
                  fillRule="evenodd"
                />
                <path
                  d="M14 3c0 1.105-2.686 2-6 2s-6-.895-6-2 2.686-2 6-2 6 .895 6 2z"
                />
                <path
                  clipRule="evenodd"
                  d="M12.9 3c-.18-.14-.497-.307-.974-.466C10.967 2.214 9.58 2 8 2s-2.968.215-3.926.534c-.477.16-.795.327-.975.466.18.14.498.307.975.466C5.032 3.786 6.42 4 8 4s2.967-.215 3.926-.534c.477-.16.795-.327.975-.466zM8 5c3.314 0 6-.895 6-2s-2.686-2-6-2-6 .895-6 2 2.686 2 6 2z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-fzplWN kfkaqr"
      >
        <h1
          className="sc-fznyAO bzFsKX"
        >
          Description
        </h1>
        <div
          className="sc-fznKkj eoewkJ"
        >
           
          <p>
            Unmanned Aircraft Systems (UAS) Traffic Management (or UTM) develops and validates airspace operational and integration performance requirements to enable safe, large-scale UAS operations in low-altitude airspace.
          </p>
           
           
        </div>
      </div>
      <div
        className="sc-AxheI dcPZjX"
      >
        <button
          className="sc-AxhUy bpzict"
          onClick={[Function]}
        >
          Show More
        </button>
      </div>
    </div>
    <div
      className="sc-AxiKw hWRSub"
      height="350px"
    >
      <div
        className="sc-fzpans ieMfoU"
      >
        <h1
          className="sc-AxhCb hMXmbp"
        >
          Bigelow Expandable Activity Module Project
        </h1>
        <button
          className="sc-AxhUy sc-AxgMl dSlZWb"
        >
          Active
        </button>
      </div>
      <div
        className="sc-AxmLO corHjn"
      >
        <div
          className="sc-Axmtr hBVTto"
        >
          <p
            className="sc-fzozJi bgyNpF"
          >
            Start Date: 
            Jan 2013
          </p>
          <p
            className="sc-fzoLsD NwLnL"
          >
            Last Update 
            2020-06-05
          </p>
        </div>
        <div
          className="sc-AxirZ eHYpas"
        >
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fzoaKM kTqJoL"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                />
              </svg>
            </div>
          </div>
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fzqAui njsUr"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clipRule="evenodd"
                  d="M3.18 4l1.528 9.164a1 1 0 00.986.836h4.612a1 1 0 00.986-.836L12.82 4H3.18zm.541 9.329A2 2 0 005.694 15h4.612a2 2 0 001.973-1.671L14 3H2l1.721 10.329z"
                  fillRule="evenodd"
                />
                <path
                  d="M14 3c0 1.105-2.686 2-6 2s-6-.895-6-2 2.686-2 6-2 6 .895 6 2z"
                />
                <path
                  clipRule="evenodd"
                  d="M12.9 3c-.18-.14-.497-.307-.974-.466C10.967 2.214 9.58 2 8 2s-2.968.215-3.926.534c-.477.16-.795.327-.975.466.18.14.498.307.975.466C5.032 3.786 6.42 4 8 4s2.967-.215 3.926-.534c.477-.16.795-.327.975-.466zM8 5c3.314 0 6-.895 6-2s-2.686-2-6-2-6 .895-6 2 2.686 2 6 2z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-fzplWN kfkaqr"
      >
        <h1
          className="sc-fznyAO bzFsKX"
        >
          Description
        </h1>
        <div
          className="sc-fznKkj eoewkJ"
        >
           
          <p>
            The Bigelow Expandable Activity Module (BEAM) project is a NASA-industry partnership with Bigelow Aerospace (BA) that developed the first human-rated expandable (also called "inflatable") space habitat for demonstration on the International Space Station (ISS). The partnership offers NASA substantial cost savings for technology development and for future exploration missions that could use commercially-provided expandable structures and habitats.
          </p>
            
          <p>
            The BEAM project advances expandable habitat technology by conducting a flight demonstration of a commercially-designed expandable system to achieve Technology Readiness Level 9.0. The primary performance requirement is to demonstrate that the BEAM can successfully launch and berth to the ISS, deploy and expand, and maintain long-term pressure without leakage. The leak performance is defined as both short-term, immediately after deployment, and long-term, for the balance of the mission.
          </p>
            
          <p>
            BEAM was successfully launched on SpaceX CRS-8 (April 8, 2016), berthed to ISS Node 3 Aft and pressurized on May 28 2016.  BEAM successfully completed leak testing and the first crew ingress was June 6, 2016.  BEAM, originally certified for a two-year life, has been functioning as expected and in November 2018 NASA and Bigelow Aerospace authorized BEAM for utilization as a stowage module and extended the mission life to the end-of-ISS life.
          </p>
            
          <p>
            The demonstration consists of the following critical technology objectives:
          </p>
            
          <p>
            - Launch of a packed expandable structure in a Commercial Resupply Services (CRS) launch vehicle
            <br />
             - Safe deployment (expansion) on ISS
            <br />
             - Passive air exchange with ISS and an environment inside the BEAM supporting periodic, temporary ingress by the ISS crew
            <br />
             - Measure deployment loads during expansion of the BEAM on ISS
            <br />
             - Determine radiation protection capability of an expandable structure in low-Earth orbit and demonstrate the performance of advanced active radiation sensors on ISS
            <br />
             - Long-term structural performance of expandable shell after exposure to atomic oxygen, vacuum, radiation, and thermal cycling
            <br />
             - Demonstrate performance of structural health monitoring systems
            <br />
             - Measure long-term leak performance of expandable bladder and bladder joints after launch and deployment cycle
            <br />
             - Develop structural and mechanical system requirements for a human-rated expandable module in an external orbital environment and successfully verify those requirements.
            <br />
             - Develop crew restraints and mobility aids for Intravehicular Activity (IVA) inside an expandable module.
            <br />
             - Develop and implement "housekeeping" procedures for internal surfaces of an expandable module.
          </p>
            
          <p>
            -Demonstrate utilization as a stowage module.
          </p>
            
          <p>
            For more information, see the following links below:
          </p>
            
          <p>
            BEAM Advanced Exploration Systems (AES) Project Overview
          </p>
            
          <p>
            <a
              href="https://www.nasa.gov/content/bigelow-expandable-activity-module"
            >
              https://www.nasa.gov/content/bigelow-expandable-activity-module
            </a>
          </p>
            
          <p>
            NASA Extends BEAM's Time on the International Space Station
          </p>
            
          <p>
            <a
              href="https://www.nasa.gov/feature/nasa-extends-beam-s-time-on-the-international-space-station"
            >
              https://www.nasa.gov/feature/nasa-extends-beam-s-time-on-the-international-space-station
            </a>
          </p>
            
          <p>
            BEAM First Year On-Orbit (May 26, 2017)
          </p>
            
          <p>
            <a
              href="https://www.nasa.gov/feature/first-year-of-beam-demo-offers-valuable-data-on-expandable-habitats"
            >
              https://www.nasa.gov/feature/first-year-of-beam-demo-offers-valuable-data-on-expandable-habitats
            </a>
          </p>
            
          <p>
            BEAM Stowage Utilization and Life Extension (October 2, 2017)
          </p>
            
          <p>
            <a
              href="https://www.nasa.gov/feature/nasa-may-extend-beam-s-time-on-the-international-space-station"
            >
              https://www.nasa.gov/feature/nasa-may-extend-beam-s-time-on-the-international-space-station
            </a>
          </p>
            
          <p>
            BEAM Facts, Figures, FAQs (July 17, 2017)
          </p>
            
          <p>
            <a
              href="https://www.nasa.gov/feature/beam-facts-figures-faqs"
            >
              https://www.nasa.gov/feature/beam-facts-figures-faqs
            </a>
          </p>
            
          <p>
            BEAM Overview (March 12, 2015)
          </p>
            
          <p>
            <a
              href="https://www.nasa.gov/content/new-expandable-addition-on-space-station-to-gather-critical-data-for-future-space-habitat"
            >
              https://www.nasa.gov/content/new-expandable-addition-on-space-station-to-gather-critical-data-for-future-space-habitat
            </a>
          </p>
            
          <p>
             
          </p>
           
           
        </div>
      </div>
      <div
        className="sc-AxheI dcPZjX"
      >
        <button
          className="sc-AxhUy bpzict"
          onClick={[Function]}
        >
          Show More
        </button>
      </div>
    </div>
    <div
      className="sc-AxiKw hWRSub"
      height="350px"
    >
      <div
        className="sc-fzpans ieMfoU"
      >
        <h1
          className="sc-AxhCb hMXmbp"
        >
          FY18 IRTD Instrumentation Ring (IR) for Cryogenic Operations
        </h1>
        <button
          className="sc-AxhUy sc-AxgMl eQsaWW"
        >
          Completed
        </button>
      </div>
      <div
        className="sc-AxmLO corHjn"
      >
        <div
          className="sc-Axmtr hBVTto"
        >
          <p
            className="sc-fzozJi bgyNpF"
          >
            Start Date: 
            Mar 2018
          </p>
          <p
            className="sc-fzoLsD NwLnL"
          >
            Last Update 
            2020-06-04
          </p>
        </div>
        <div
          className="sc-AxirZ eHYpas"
        >
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fzowVh jdzsSt"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                />
              </svg>
            </div>
          </div>
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fzoVTD kggskK"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clipRule="evenodd"
                  d="M3.18 4l1.528 9.164a1 1 0 00.986.836h4.612a1 1 0 00.986-.836L12.82 4H3.18zm.541 9.329A2 2 0 005.694 15h4.612a2 2 0 001.973-1.671L14 3H2l1.721 10.329z"
                  fillRule="evenodd"
                />
                <path
                  d="M14 3c0 1.105-2.686 2-6 2s-6-.895-6-2 2.686-2 6-2 6 .895 6 2z"
                />
                <path
                  clipRule="evenodd"
                  d="M12.9 3c-.18-.14-.497-.307-.974-.466C10.967 2.214 9.58 2 8 2s-2.968.215-3.926.534c-.477.16-.795.327-.975.466.18.14.498.307.975.466C5.032 3.786 6.42 4 8 4s2.967-.215 3.926-.534c.477-.16.795-.327.975-.466zM8 5c3.314 0 6-.895 6-2s-2.686-2-6-2-6 .895-6 2 2.686 2 6 2z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-fzplWN kfkaqr"
      >
        <h1
          className="sc-fznyAO bzFsKX"
        >
          Description
        </h1>
        <div
          className="sc-fznKkj eoewkJ"
        >
           
          <p>
            Cryogenic systems are required to store and transfer cryogenic commodities. Kennedy Space Center (KSC) ground operations (GO) are primarily involved with cryogenic systems that store and transfer liquid hydrogen (LH
            <sub>
              2
            </sub>
            ) and liquid oxygen (LO
            <sub>
              2
            </sub>
            ), and are used for propellant loading of launch vehicles. Propellant loading operations are complex activities. Operation and maintenance (O&M) of these cryogenic systems account for a sizeable portion of the life-cycle costs in any program.
          </p>
            
          <p>
            At the present time, cryogenics systems at KSC incorporate many individual transducers and sensors (to measure pressure, temperature, flow, etc.) in and around the systems’ components (such as tanks, pumps, radiators, etc.) and along the connecting transfer pipes. These sensors are used to command, monitor and control the flow of cryogenics while maintaining the required conditions of the propellants.  These sensors and transducers are monitored by LH
            <sub>
              2
            </sub>
            /LOX system engineers, console operators, and subject matter experts (SME) to determine loading operations modes and the quality of flow along the system during transfer operations, among other things.
          </p>
            
          <p>
            Several inefficiencies are identified with present approach. Among them are (a) the number of sensors utilized by the systems (not necessary optimized for sensor placement and coverage, primarily located around main components such tanks and pumps), (b) the number of individual penetrations and welds (required to house these sensors) with the potential for thermal and propellant leaks, (c) the number of associated power and signal cables to these sensors, (d) the inability to accurately determine in real time the quality of flow (by-phase, gas, liquid) across the system (which translate in longer loading activities), (d) the labor-intensive activities associated with operations and maintenance (O&M) of these systems (such as sensors’ remove and replace (R&R), calibration of sensors, system retesting, etc.)
          </p>
            
          <p>
            The primary objective of the Cryogenic Instrumentation Ring (CIR) is to improve the monitoring and control capabilities of cryogenic loading operations when compared to traditional approaches. The CIR Improvement objectives are to: 
          </p>
            
          <ul>
            <li>
              Optimize the number of required sensors and their locations across the cryogenic systems, which in turn 	
              <ul>
                <li>
                  Minimizes the number of penetrations and welds required for sensors
                </li>
                <li>
                  Reduces the associated power and signal cabling required
                </li>
                <li>
                  Reduces the amount of calibration, R&R activities, re-testing, etc.
                </li>
                <li>
                  Reduces the number of potential propellant leaks in the system
                </li>
              </ul>
               	
            </li>
            <li>
              Improve the understanding of cryogenics flow throughout the system 	
              <ul>
                <li>
                  CIR units at specific locations of the system together with a real-time physics-based simulation of the system provides a holistic view of the overall process versus a fragmented series of partial assessments (tank, pumps, transfer lines, etc.) which in turn 		
                  <ul>
                    <li>
                      Reduces/Optimizes propellant usage during the different modes of the loading operation
                    </li>
                    <li>
                      Support real-time decision making and contingency actions if needed  
                    </li>
                  </ul>
                   		
                </li>
              </ul>
               	
            </li>
            <li>
              Improve instrumentation and process health management activities
            </li>
            <li>
              Overall, reduce the O&M costs associated with these systems
            </li>
          </ul>
            
          <p>
             
          </p>
            
          <p>
            The CIR approach seeks to demonstrate the benefits and feasibility of a localized instrumentation scheme that provides improved understanding of the cryogenics flow dynamics by measuring constituents at specified locations throughout the cryogenic system.  By positioning these CIR units between adjoining sections of cryogenic pipes (such in ), it reduces the number of penetrations required throughout the length of the pipe. 
          </p>
            
          <p>
            The CIR system could incorporate various sensing elements to measure temperature, pressure, flow rate, density, humidity, vacuum, oxygen, hydrogen, and helium concentrations among other parameters.  Other desired parameters may either be derived from these fundamental parameters (by sensor fusion) or quantified by a hybrid instrumentation approach (such as flow quality, two-phase flow regime determination, liquid level, etc.) 
          </p>
            
          <p>
             
          </p>
            
          <p>
            The CIR concept was previously investigated under the Autonomous Cryogenics Loading Operation (ACLO) project, funded by the Space Technology Mission Directorate (STMD), Game Changing Development (GCD) program. CIR was one in a series of intelligent instrumentation concepts designed to support autonomy through the use of intelligent sensors and actuators, sensor fusion, and embedded health management capabilities in cryogenic operations. Under the ACLO approach, CIR units located at specific points (interfaces) of a cryogenic system would supports the evaluation of flow performance and system/components health, among other things.
          </p>
            
          <p>
            The ACLO project combined a real-time high-fidelity physics based model of the targeted cryogenic system with real-time information obtained from the sensors in the system to assess and determine the optimal loading of cryogenics. CIR units would provide real-time snapshots (views) of the flow along the system at predetermined locations to determine the evolution over time of flow regimes and heat flow characteristics.  Integrating and fusing the data received from each CIR with the physics based model provides a complete and in-depth understanding of the performance and condition of the system.
          </p>
            
          <p>
            Due to budget limitations, the ACLO project was cancelled when the CIR task was in the formulation phase.  This IR&TD project continues the development of the CIR concept, algorithms, and it prototypes a sample of instrumentation ring as proof of concept.
          </p>
           
           
        </div>
      </div>
      <div
        className="sc-AxheI dcPZjX"
      >
        <button
          className="sc-AxhUy bpzict"
          onClick={[Function]}
        >
          Show More
        </button>
      </div>
    </div>
    <div
      className="sc-AxiKw hWRSub"
      height="350px"
    >
      <div
        className="sc-fzpans ieMfoU"
      >
        <h1
          className="sc-AxhCb hMXmbp"
        >
          FY18 IRTD Developing a Closed-loop, Bioregenerative Water Purification System for Future Planetary Habitats (Zero-G Anaerobic Membrane Bioreactor)
        </h1>
        <button
          className="sc-AxhUy sc-AxgMl eQsaWW"
        >
          Completed
        </button>
      </div>
      <div
        className="sc-AxmLO corHjn"
      >
        <div
          className="sc-Axmtr hBVTto"
        >
          <p
            className="sc-fzozJi bgyNpF"
          >
            Start Date: 
            Mar 2018
          </p>
          <p
            className="sc-fzoLsD NwLnL"
          >
            Last Update 
            2020-06-04
          </p>
        </div>
        <div
          className="sc-AxirZ eHYpas"
        >
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fznyYp iNEfuB"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                />
              </svg>
            </div>
          </div>
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fznXWL dZEnIq"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clipRule="evenodd"
                  d="M3.18 4l1.528 9.164a1 1 0 00.986.836h4.612a1 1 0 00.986-.836L12.82 4H3.18zm.541 9.329A2 2 0 005.694 15h4.612a2 2 0 001.973-1.671L14 3H2l1.721 10.329z"
                  fillRule="evenodd"
                />
                <path
                  d="M14 3c0 1.105-2.686 2-6 2s-6-.895-6-2 2.686-2 6-2 6 .895 6 2z"
                />
                <path
                  clipRule="evenodd"
                  d="M12.9 3c-.18-.14-.497-.307-.974-.466C10.967 2.214 9.58 2 8 2s-2.968.215-3.926.534c-.477.16-.795.327-.975.466.18.14.498.307.975.466C5.032 3.786 6.42 4 8 4s2.967-.215 3.926-.534c.477-.16.795-.327.975-.466zM8 5c3.314 0 6-.895 6-2s-2.686-2-6-2-6 .895-6 2 2.686 2 6 2z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-fzplWN kfkaqr"
      >
        <h1
          className="sc-fznyAO bzFsKX"
        >
          Description
        </h1>
        <div
          className="sc-fznKkj eoewkJ"
        >
           
          <p>
            This project worked to solve the critical needs of future space missions to establish planetary bases that require large volumes of water to support astronauts, food generating plants, and key infrastructure including science experiments and thermal cooling systems by combining water purification, wastewater management, and plant production into a closed-loop, bioregenerative wastewater purification system.  A wastewater treatment facility was designed that will (1) process all forms of wastewater – to include all sources of crew-generated waste; (2) fit within architecture designed for the International Space Station (ISS), Gateway, and future Lunar Surface System habitats; and (3) be fully closed-loop requiring no chemical or filter resupply. Trade studies were performed to identify and characterize the input waste streams into the system, the functions required to perform treatment, and the output streams required by end-users. The required processing functions led to the creation of a system architecture though the downselection of optimal processing methods.
          </p>
            
          <p>
            The initial subsystem, the Anaerobic Membrane BioReactor (AnMBR), was designed and built at the University of South Florida (USF) to process high concentration blackwater. The AnMBR subsystem breaks down particulate organic matter and large molecules through an anaerobic microbial membrane process. Prototype fabrication of AnMBR was performed under an NSSC contract utilizing USF lab capabilities, including machining and tooling resources with select components made in the USF 3D fabrication lab. The completed AnMBR system was designed to fit into the EXpedite the PRocessing of Experiments to the Space Station (EXPRESS) rack aboard the ISS. The EXPRESS rack design can potentially be used aboard a future microgravity flight or tweaked to fit within the Gateway Habitat element.
          </p>
            
          <p>
            A Phototrophic Membrane Bioreactor (PMBR) was proposed as the secondary subsystem for the overall ‘closed-loop water purification’ system. The PMBR converts fertilizer compounds from wastewater to algal biomass, providing a source of oxygen, and sink for carbon dioxide. The systems primary goal was to produce a PMBR effluent stream that is suitable for higher order plant growth; this required a reduction of ammonia concentration. Using algae's oxygen production capabilities, the system converted some of the ammonia to nitrate with nitrifying bacteria. In addition to the effluent water stream used for plant growth, the PMBR also produced oxygen and sequesters carbon dioxide. This is currently being measured to quantify the impact of such a system on crew life support and future habitat development. In addition to collecting data on long-term testing, additional investigations are ongoing to further optimize the PMBR.
          </p>
            
          <p>
            Future tasks and deliverables are expected under six-year project plan under an Advanced Exploration Systems funded proposal.
          </p>
           
           
        </div>
      </div>
      <div
        className="sc-AxheI dcPZjX"
      >
        <button
          className="sc-AxhUy bpzict"
          onClick={[Function]}
        >
          Show More
        </button>
      </div>
    </div>
    <div
      className="sc-AxiKw hWRSub"
      height="350px"
    >
      <div
        className="sc-fzpans ieMfoU"
      >
        <h1
          className="sc-AxhCb hMXmbp"
        >
          Miniaturized Scrubber System for Long Duration Exploration andHabitation Applications
        </h1>
        <button
          className="sc-AxhUy sc-AxgMl dSlZWb"
        >
          Active
        </button>
      </div>
      <div
        className="sc-AxmLO corHjn"
      >
        <div
          className="sc-Axmtr hBVTto"
        >
          <p
            className="sc-fzozJi bgyNpF"
          >
            Start Date: 
            Aug 2015
          </p>
          <p
            className="sc-fzoLsD NwLnL"
          >
            Last Update 
            2020-06-02
          </p>
        </div>
        <div
          className="sc-AxirZ eHYpas"
        >
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fzqzlV quDmu"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                />
              </svg>
            </div>
          </div>
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fzoxnE eNYdgr"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clipRule="evenodd"
                  d="M3.18 4l1.528 9.164a1 1 0 00.986.836h4.612a1 1 0 00.986-.836L12.82 4H3.18zm.541 9.329A2 2 0 005.694 15h4.612a2 2 0 001.973-1.671L14 3H2l1.721 10.329z"
                  fillRule="evenodd"
                />
                <path
                  d="M14 3c0 1.105-2.686 2-6 2s-6-.895-6-2 2.686-2 6-2 6 .895 6 2z"
                />
                <path
                  clipRule="evenodd"
                  d="M12.9 3c-.18-.14-.497-.307-.974-.466C10.967 2.214 9.58 2 8 2s-2.968.215-3.926.534c-.477.16-.795.327-.975.466.18.14.498.307.975.466C5.032 3.786 6.42 4 8 4s2.967-.215 3.926-.534c.477-.16.795-.327.975-.466zM8 5c3.314 0 6-.895 6-2s-2.686-2-6-2-6 .895-6 2 2.686 2 6 2z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-fzplWN kfkaqr"
      >
        <h1
          className="sc-fznyAO bzFsKX"
        >
          Description
        </h1>
        <div
          className="sc-fznKkj eoewkJ"
        >
           
          <p>
            The aim of this effort is to develop a minaturized carbon dioxide scrubber system based on proprietary Dynetics technology to provide atmosphere revitalization.  The system will operate with low to no consumable requirements, minimal maintenance, and supports existing oxygen recovery processes. An endurance ground tests will be performed to inform a flight experiment in the 2020 timeframe.  This activity is a NextSTEP partnership between NASA and Dynetics.
          </p>
           
           
        </div>
      </div>
      <div
        className="sc-AxheI dcPZjX"
      >
        <button
          className="sc-AxhUy bpzict"
          onClick={[Function]}
        >
          Show More
        </button>
      </div>
    </div>
    <div
      className="sc-AxiKw hWRSub"
      height="350px"
    >
      <div
        className="sc-fzpans ieMfoU"
      >
        <h1
          className="sc-AxhCb hMXmbp"
        >
          NextSTEP Phase 2 Environmental Control Life Support Systems Modularity Study
        </h1>
        <button
          className="sc-AxhUy sc-AxgMl dSlZWb"
        >
          Active
        </button>
      </div>
      <div
        className="sc-AxmLO corHjn"
      >
        <div
          className="sc-Axmtr hBVTto"
        >
          <p
            className="sc-fzozJi bgyNpF"
          >
            Start Date: 
            Aug 2015
          </p>
          <p
            className="sc-fzoLsD NwLnL"
          >
            Last Update 
            2020-06-02
          </p>
        </div>
        <div
          className="sc-AxirZ eHYpas"
        >
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fzoWqW jvknil"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                />
              </svg>
            </div>
          </div>
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fznzqM juHsxH"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clipRule="evenodd"
                  d="M3.18 4l1.528 9.164a1 1 0 00.986.836h4.612a1 1 0 00.986-.836L12.82 4H3.18zm.541 9.329A2 2 0 005.694 15h4.612a2 2 0 001.973-1.671L14 3H2l1.721 10.329z"
                  fillRule="evenodd"
                />
                <path
                  d="M14 3c0 1.105-2.686 2-6 2s-6-.895-6-2 2.686-2 6-2 6 .895 6 2z"
                />
                <path
                  clipRule="evenodd"
                  d="M12.9 3c-.18-.14-.497-.307-.974-.466C10.967 2.214 9.58 2 8 2s-2.968.215-3.926.534c-.477.16-.795.327-.975.466.18.14.498.307.975.466C5.032 3.786 6.42 4 8 4s2.967-.215 3.926-.534c.477-.16.795-.327.975-.466zM8 5c3.314 0 6-.895 6-2s-2.686-2-6-2-6 .895-6 2 2.686 2 6 2z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-fzplWN kfkaqr"
      >
        <h1
          className="sc-fznyAO bzFsKX"
        >
          Description
        </h1>
        <div
          className="sc-fznKkj eoewkJ"
        >
           
          <p>
            The objectives of the Environmental Control and Life Support Systems (ECLSS) Modularity Phase 2 study are to add activities that are needed to evolve ECLSS from supporting an initial cislunar habitat toward a habitat for deep space travel.  This program will develop an ECLSS architecture for a cislunar habitat that is evolvable to support closed-loop, earth independent, deep space exploration applications; generate a dynamic modular ECLSS model; develop a fully functional prototype of the selected control architecture; support the development of ECLSS Standards and Interfaces; leverage the state-of-the-art intelligent technologies to enhance ECLSS performance, safety and reliability; develop and fabricate a series of demonstration pallets; and develop and fabricate an Air Revitalization System (ARS) Prototype.
          </p>
           
           
        </div>
      </div>
      <div
        className="sc-AxheI dcPZjX"
      >
        <button
          className="sc-AxhUy bpzict"
          onClick={[Function]}
        >
          Show More
        </button>
      </div>
    </div>
    <div
      className="sc-AxiKw hWRSub"
      height="350px"
    >
      <div
        className="sc-fzpans ieMfoU"
      >
        <h1
          className="sc-AxhCb hMXmbp"
        >
          NASA Platform for Autonomous Systems
        </h1>
        <button
          className="sc-AxhUy sc-AxgMl dSlZWb"
        >
          Active
        </button>
      </div>
      <div
        className="sc-AxmLO corHjn"
      >
        <div
          className="sc-Axmtr hBVTto"
        >
          <p
            className="sc-fzozJi bgyNpF"
          >
            Start Date: 
            Sep 2016
          </p>
          <p
            className="sc-fzoLsD NwLnL"
          >
            Last Update 
            2020-06-01
          </p>
        </div>
        <div
          className="sc-AxirZ eHYpas"
        >
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fznYue gyEfAQ"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                />
              </svg>
            </div>
          </div>
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fzqzEs bLMUay"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clipRule="evenodd"
                  d="M3.18 4l1.528 9.164a1 1 0 00.986.836h4.612a1 1 0 00.986-.836L12.82 4H3.18zm.541 9.329A2 2 0 005.694 15h4.612a2 2 0 001.973-1.671L14 3H2l1.721 10.329z"
                  fillRule="evenodd"
                />
                <path
                  d="M14 3c0 1.105-2.686 2-6 2s-6-.895-6-2 2.686-2 6-2 6 .895 6 2z"
                />
                <path
                  clipRule="evenodd"
                  d="M12.9 3c-.18-.14-.497-.307-.974-.466C10.967 2.214 9.58 2 8 2s-2.968.215-3.926.534c-.477.16-.795.327-.975.466.18.14.498.307.975.466C5.032 3.786 6.42 4 8 4s2.967-.215 3.926-.534c.477-.16.795-.327.975-.466zM8 5c3.314 0 6-.895 6-2s-2.686-2-6-2-6 .895-6 2 2.686 2 6 2z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-fzplWN kfkaqr"
      >
        <h1
          className="sc-fznyAO bzFsKX"
        >
          Description
        </h1>
        <div
          className="sc-fznKkj eoewkJ"
        >
           
          <p>
            Autonomous operations are critical for the success, safety and crew survival of NASA deep space missions beyond low Earth orbit, including Gateway. For the past 10 years, Stennis Space Center (SSC) has been developing, and has demonstrated an innovative software platform, along with expertise and processes for implementation of autonomous operations.
          </p>
            
          <p>
            The current version is called NASA Platform for Autonomous Systems (NPAS).  NPAS is developed using the G2 platform - a COTS product (a MIT derivative). NPAS provides the foundational technology and processes to evolve from traditional “Brute-Force Autonomy” (BFA) towards innovative “Thinking Autonomy” (TA).  NPAS applications encompass comprehensive SysML-like live-models that permit model-based real-time analysis and operations. NPAS uniquely extends the paradigm of model-based systems engineering (MBSE) beyond static models, into live models for real-time thinking autonomous operations that can be rapidly and affordably implemented, deployed, re-used and evolved.
          </p>
            
          <p>
            NPAS supports the concept that achieving autonomous operations, beyond developing algorithms for dealing with specific cases that warrant an autonomous response (or reaction), must address implementing strategies for autonomy that are guided by combination of requirements that include, policy, operations procedures, mission objectives.  In this context, an autonomous system makes the best use of available resources to achieve the specified mission.
          </p>
            
          <p>
            NPAS uniquely addresses autonomous operation requirements and integrates primary functionalities including: (1) autonomy strategies based on concepts of operation, while taking advantage of system attributes such as redundancy, persistence strategies such as repeating commands, and others; (2) Integrated System Health Management (ISHM) strategies, for anomaly detection, diagnostics and effects (FMEA), prognostics, and comprehensive awareness; (3) object libraries and infrastructure to create knowledge models of applications (reusable);  (4) infrastructure to create mission operations encompassing plans, schedules, and sequences; and (5) infrastructure to develop user interfaces providing comprehensive awareness for users, developers, and management
          </p>
            
          <p>
            A goal of the current NPAS project is to integrate with other Advanced Exploration Systems (AES)/HEOMD projects at Johnson Space Center's (JSC's) Integrated Power Avionics and Software (iPAS) “habitat” test article. NPAS was used to demonstrate integration with the Autonomous Power Controller (APC) associated with the AES Modular Power System. The demonstration included successful nominal and fault conversations between the APC and the NPAS Vehicle System Manager (VSM). The VSM application ran from a networked single-board computer housed in iPAS.
          </p>
            
          <p>
            Additionally, NPAS provided an autonomous operational capability that was integrated into a space habitation module “mock-up” built by a partner that was awarded a NASA Next Space Technologies for Exploration Partnerships-2 (NextSTEP-2) demonstration activity. NPAS was used to create an autonomous operations habitat module application encompassing a Vehicle Manger (VehMgr) and an autonomous Electrical Power System (EPS) that powers the habitat. These NPAS applications were architected to demonstrate hierarchical distributed autonomous capability and were integrated into the existing habitation “mock-up” architecture and UI. The NPAS VehMgr UI provided awareness and information on activities associated with near rectilinear halo orbit – NRHO (orbit proposed for Gateway).  For the demonstration, the VehMgr UI provided access to the following information:
          </p>
            
          <ul>
            <li>
              Vehicle Timeline Display: showing activity timeline for the habitat and its systems (e.g. electrical power system) 	
              <ul>
                <li>
                  Activities displayed in the timeline showed what was happening at the current time, and activities 5 hours before and after current time
                </li>
              </ul>
               	
            </li>
            <li>
              Modes of operation of the habitat:  e.g. Station Keeping, crewed/uncrewed
            </li>
            <li>
              Health of the habitat: i.e. nominal, degraded, faulted, recover, safed, failed, standby, test, off
            </li>
            <li>
              Alerts:  a placeholder due to the fact that the habitat was notionally fixed to nominal for the Habitation in the Life (HITL) demonstration
            </li>
            <li>
              Time:  local and ground
            </li>
            <li>
              Command Authority State:  autonomous, ground, or crew
            </li>
            <li>
              Persistent high level “quick look” awareness about the systems in the habitat (i.e. EPS, Life Support System, Communications, Thermal, Mechanical, Guidance Navigation & Control-GNC, and Avionics) such as the health of each system, and operational state
            </li>
            <li>
              In-depth awareness about the EPS system with one mouse click (e.g. life schematic awareness showing visual flow of power to loads, battery state and availability, solar array and regulator); this was done for the Electrical Power System, with telemetry fed by a simulation to the NPAS autonomous application model 	
              <ul>
                <li>
                  The UI is designed so that this in-depth awareness can be implemented for each system in the habitat
                </li>
              </ul>
               	
            </li>
          </ul>
            
          <p>
            NPAS applications  integrated with the simulation environment (prototype Flight Software-FSW-using Core Flight System (CFS) running on VxWorks-653 2.4), including telemetry coming from a simulator; operating under basic Concepts of Operation (e.g. nominal operation, crewed); communicating via the CFS Software Bus Network (SBN).
          </p>
            
          <p>
            NPAS VehMGR and NPAS EPS were included as part of the final deliverable to NASA by the NextStep-2 partner. NPAS autonomy implementation was included in the evaluation by NASA, as part of HITL, which encompassed three 8-hour days of simulated habitat operations executed by astronauts that included interaction with the NPAS autonomous operations (NPAS VehMgr and NPAS EPS). The evaluation also included non-crew expert personnel.
          </p>
            
          <p>
            For these projects, the NPAS, and corresponding engineering processes, rapidly achieved implementation of intelligent distributed autonomy encompassing a capability that is consistent with the  current concepts of operations associated with Gateway, including tools for  implementation of a reference architecture that includes Vehicle System Manager, Module Manager, system, subsystem down to component level autonomy,  validating NPAS as an efficient, cost-effective, integrated, and unique autonomous operation software capability.
          </p>
            
          <p>
            Currently, NPAS includes autonomy strategies, ISHM strategies and libraries of system elements for electrical, mechanical, computer, and communications applications that can be used for a wide range of implementations.
          </p>
            
          <p>
            NPAS represents an innovative approach and technology to rapidly implement and deploy intelligent/thinking autonomous operations. NPAS encompasses tools for creating an integrated autonomy solution: comprehensive (real-time) operational knowledge models (beyond the comprehensiveness of SysML models) –capturing digital twin/digital thread information, health assessment, diagnostics, anomaly detection (FMEA), autonomous operational strategies, mission plan scheduling and execution.
          </p>
           
           
        </div>
      </div>
      <div
        className="sc-AxheI dcPZjX"
      >
        <button
          className="sc-AxhUy bpzict"
          onClick={[Function]}
        >
          Show More
        </button>
      </div>
    </div>
    <div
      className="sc-AxiKw hWRSub"
      height="350px"
    >
      <div
        className="sc-fzpans ieMfoU"
      >
        <h1
          className="sc-AxhCb hMXmbp"
        >
          Spacecraft Fire Safety Demonstration
        </h1>
        <button
          className="sc-AxhUy sc-AxgMl dSlZWb"
        >
          Active
        </button>
      </div>
      <div
        className="sc-AxmLO corHjn"
      >
        <div
          className="sc-Axmtr hBVTto"
        >
          <p
            className="sc-fzozJi bgyNpF"
          >
            Start Date: 
            Oct 2011
          </p>
          <p
            className="sc-fzoLsD NwLnL"
          >
            Last Update 
            2020-06-01
          </p>
        </div>
        <div
          className="sc-AxirZ eHYpas"
        >
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fzoCCn dLwcQC"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                />
              </svg>
            </div>
          </div>
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fzpdbB jDpZpv"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clipRule="evenodd"
                  d="M3.18 4l1.528 9.164a1 1 0 00.986.836h4.612a1 1 0 00.986-.836L12.82 4H3.18zm.541 9.329A2 2 0 005.694 15h4.612a2 2 0 001.973-1.671L14 3H2l1.721 10.329z"
                  fillRule="evenodd"
                />
                <path
                  d="M14 3c0 1.105-2.686 2-6 2s-6-.895-6-2 2.686-2 6-2 6 .895 6 2z"
                />
                <path
                  clipRule="evenodd"
                  d="M12.9 3c-.18-.14-.497-.307-.974-.466C10.967 2.214 9.58 2 8 2s-2.968.215-3.926.534c-.477.16-.795.327-.975.466.18.14.498.307.975.466C5.032 3.786 6.42 4 8 4s2.967-.215 3.926-.534c.477-.16.795-.327.975-.466zM8 5c3.314 0 6-.895 6-2s-2.686-2-6-2-6 .895-6 2 2.686 2 6 2z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-fzplWN kfkaqr"
      >
        <h1
          className="sc-fznyAO bzFsKX"
        >
          Description
        </h1>
        <div
          className="sc-fznKkj eoewkJ"
        >
           
          <p>
            The objective of the Spacecraft Fire Safety Demonstration project is to develop and conduct large-scale fire safety experiments on an International Space Station resupply vehicle after it leaves the ISS and before it re-enters the Earth's atmosphere. Three Spacecraft Fire Experiment (Saffire) flight units were developed and have flown on three sequential flights of Northrop Grumman's (formerly Orbital ATK) Cygnus re-supply vehicle. Saffire-I was launched on OA-6 in March 2016, Saffire-II on OA-5 in October 2016, and Saffire-III on OA-7 in March 2017.  The Saffire-I, II, and III experiments were all operated successfully in June 2016, November 2016, and June 2017, respectively.
          </p>
            
          <p>
            Three more Saffire experiments, Saffire-IV-VI, are now being developed to continue to investigate material flammability risks that will be faced by the crew on NASA's long duration exploration missions, especially at reduced pressure and higher oxygen concentrations. These experiments will also obtain data on large-scale spacecraft fire detection, monitoring, and post-fire cleanup as well as obtain valuable data to allow spacecraft designers and engineers to predict the development of fire scenarios in exploration vehicles and habitats. The SFS Demo Project is managed by NASA John H. Glenn Research Center (GRC) who also developed the design and fabricated the hardware for Saffire-I-III. Saffire-IV-VI are being developed by a team comprised of personnel from NASA and ZIN Technologies, Inc.
          </p>
            
          <p>
            Personnel from NASA Johnson Spaceflight Center, NASA Jet Propulsion Lab, and the NASA White Sands Test Facility also provided instruments and testing support for the Saffire experiments. The NASA team is augmented by an international topical team assembled by the European Space Agency (ESA). Each member of this team brings expertise and funding from their respective space and research agencies for their activities. The experiment hardware for Saffire-I-VI is approximately 53 cm x 90 cm x 133 cm and consists of a flow duct, containing the sample material to be burned, fans, and flow straightener, and an avionics bay, containing the power management system, control computer, signal conditioning card, and cameras. Saffire-I and III had a single large sample (0.4 m x 0.9 m) made of a composite fabric (75% cotton/25% fiberglass by mass) that has been studied in previous low-gravity experiments although using much smaller samples. This sample burned completely during the tests and yielded information about the fate (flame size and spread rate) of a large-scale fire in low-gravity. Saffire-II had nine samples (5-cm wide x 30-cm long) of various materials that were selected to investigate the low-gravity Maximum Oxygen Concentration (MOC) flammability limits in long-term low gravity. These samples emulate the configuration used in NASA-STD-6001 Test 1, the flammability test conducted in normal gravity to determine if a flame will spread upward over the sample or if it will self-extinguish. A material that self-extinguishes is considered as being safe for use in spacecraft from the standpoint of flammability.
          </p>
            
          <p>
            To conduct the Saffire experiments, the Saffire hardware is loaded in the Cygnus Pressurized Cargo Module by Northrop Grumman and launched from the Wallops Flight Facility. Once at the International Space Station, Saffire remains unpowered on Cygnus while supplies for the ISS are off-loaded by the crew. Once supplies are off-loaded and replaced with trash, Cygnus departs. When the vehicle reaches a safe distance from the ISS, Saffire will be powered on by a team of Northrop Grumman and Saffire engineers working from Northrop Grumman's Dulles Control Center in Dulles, VA. After conducting system checks, Cygnus will be put into free drift and the experiment initiated. Saffire-I, II, and III ran autonomously for about 2-1/2 hours. With the expanded objectives of Saffire-IV-VI, the experiment will require about 8 hours to be completed. When the experiment is complete, Cygnus continues to orbit the earth while the data is downlinked to various ground stations. When downlink is complete, Cygnus will then begin its reentry into the Earth's atmosphere where it will burn up over the Pacific Ocean. The design for the Saffire-IV-VI experiments is complete and the units are being fabricated to be followed by extensive ground testing to verify operation. Saffire-IV is scheduled to be launched in October 2019, with Saffire-V and VI following in February and May of 2020.
          </p>
           
           
        </div>
      </div>
      <div
        className="sc-AxheI dcPZjX"
      >
        <button
          className="sc-AxhUy bpzict"
          onClick={[Function]}
        >
          Show More
        </button>
      </div>
    </div>
    <div
      className="sc-AxiKw hWRSub"
      height="350px"
    >
      <div
        className="sc-fzpans ieMfoU"
      >
        <h1
          className="sc-AxhCb hMXmbp"
        >
          Accurate Strength & Life Prediction
        </h1>
        <button
          className="sc-AxhUy sc-AxgMl eQsaWW"
        >
          Completed
        </button>
      </div>
      <div
        className="sc-AxmLO corHjn"
      >
        <div
          className="sc-Axmtr hBVTto"
        >
          <p
            className="sc-fzozJi bgyNpF"
          >
            Start Date: 
            Oct 2014
          </p>
          <p
            className="sc-fzoLsD NwLnL"
          >
            Last Update 
            2020-05-29
          </p>
        </div>
        <div
          className="sc-AxirZ eHYpas"
        >
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fznBtT fqoCIb"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                />
              </svg>
            </div>
          </div>
          <div
            className="sc-AxjAm dDFjLF"
            onClick={[Function]}
          >
            <div
              className="sc-fzobTh dRPxfG"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clipRule="evenodd"
                  d="M3.18 4l1.528 9.164a1 1 0 00.986.836h4.612a1 1 0 00.986-.836L12.82 4H3.18zm.541 9.329A2 2 0 005.694 15h4.612a2 2 0 001.973-1.671L14 3H2l1.721 10.329z"
                  fillRule="evenodd"
                />
                <path
                  d="M14 3c0 1.105-2.686 2-6 2s-6-.895-6-2 2.686-2 6-2 6 .895 6 2z"
                />
                <path
                  clipRule="evenodd"
                  d="M12.9 3c-.18-.14-.497-.307-.974-.466C10.967 2.214 9.58 2 8 2s-2.968.215-3.926.534c-.477.16-.795.327-.975.466.18.14.498.307.975.466C5.032 3.786 6.42 4 8 4s2.967-.215 3.926-.534c.477-.16.795-.327.975-.466zM8 5c3.314 0 6-.895 6-2s-2.686-2-6-2-6 .895-6 2 2.686 2 6 2z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-fzplWN kfkaqr"
      >
        <h1
          className="sc-fznyAO bzFsKX"
        >
          Description
        </h1>
        <div
          className="sc-fznKkj eoewkJ"
        >
           
          <p>
            The Accurate Strength & Life Prediction challenge develops validated strength and life prediction tools with known accuracy for complex composite structures and standardized procedures for their reliable use.
          </p>
           
        </div>
      </div>
      <div
        className="sc-AxheI dcPZjX"
      >
        <button
          className="sc-AxhUy bpzict"
          onClick={[Function]}
        >
          Show More
        </button>
      </div>
    </div>
  </div>,
  <div
    className="sc-fzpjYC erycuI"
  >
    <div
      className="sc-fznJRM dgUBuE"
    />
    <div
      className="sc-fzqNJr eXzxxr"
    >
      <button
        className="sc-fzoyAV iXTpvx"
        disabled={false}
        onClick={[Function]}
      >
        &lt;
         Previous
      </button>
      <div
        className="sc-fzoXzr hvfCyO"
      >
         Page 
        5
         
      </div>
      <button
        className="sc-fzoLag dQOWkc"
        disabled={false}
        onClick={[Function]}
      >
        Next &gt;
      </button>
    </div>
    <button
      className="sc-fznxsB cAIpSq"
    >
      Export Data
    </button>
  </div>,
]
`;
